--- a/backend-flask/Dockerfile
+++ b/backend-flask/Dockerfile
@@ -4,10 +4,11 @@ WORKDIR /backend-flask
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
+RUN opentelemetry-bootstrap --action=install
 
 COPY . .
 
 ENV FLASK_ENV=development
 
 EXPOSE ${PORT}
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "--port=4567"]
+CMD [ "opentelemetry-instrument", "python3", "-m" , "flask", "run", "--host=0.0.0.0", "--port=4567"]
