--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -1,5 +1,7 @@
 flask
 flask-cors
-opentelemetry-instrumentation
-opentelemetry-distro
-opentelemetry-exporter-otlp
+opentelemetry-api 
+opentelemetry-sdk 
+opentelemetry-exporter-otlp-proto-http 
+opentelemetry-instrumentation-flask 
+opentelemetry-instrumentation-requests
