implement fe sign up/in

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_OXb1f2EEP"
-      REACT_APP_CLIENT_ID: "6fknnij8en30bngrmo64piielg"
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_ikUKX84R1"
+      REACT_APP_CLIENT_ID: "1od7pfsjgdmh3liuvf7pkpmdk9"
       REACT_APP_AWS_USER_POOLS_WEB_CLIENT_ID: ""
     build: ./frontend-react-js
     ports:
