--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       ROLLBAR_ACCESS_TOKEN: "${ROLLBAR_ACCESS_TOKEN}"
       AWS_COGNITO_USER_POOL_ID: "us-east-1_ikUKX84R1"
       AWS_COGNITO_USER_POOL_CLIENT_ID: "1od7pfsjgdmh3liuvf7pkpmdk9"
+      AWS_DEFAULT_REGION: "${AWS_DEFAULT_REGION}"
     build: ./backend-flask
     ports:
       - "4567:4567"
